--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/android": "7.4.3",
     "@capacitor/app": "7.1.0",
     "@capacitor/core": "^7.4.3",
+    "@capacitor/geolocation": "^7.1.5",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/ios": "^7.4.3",
     "@capacitor/keyboard": "7.0.3",
@@ -31,6 +32,7 @@
     "@capacitor/status-bar": "7.0.3",
     "@ionic/angular": "^8.7.5",
     "@ionic/cli": "^7.2.1",
+    "axios": "^1.12.2",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
