--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -14,8 +14,8 @@ android {
     minSdkVersion rootProject.ext.minSdkVersion
     targetSdkVersion rootProject.ext.targetSdkVersion
 
-    versionCode 16         // ← súbelo en cada release
-    versionName "1.1.6"
+    versionCode 21         // ← súbelo en cada release
+    versionName "1.2.1"
 
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     aaptOptions {
@@ -63,6 +63,8 @@ dependencies {
   testImplementation "junit:junit:$junitVersion"
   androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
   androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+  implementation project(':capacitor-geolocation')
+  implementation project(':capacitor-native-settings')
 }
 
 apply from: 'capacitor.build.gradle'
