--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/AppTheme">
+    android:theme="@style/AppTheme" 
+  android:usesCleartextTraffic="true"
+  android:networkSecurityConfig="@xml/network_security_config">
+
+  
 
     <activity
       android:name="com.rids.ridsmovil.MainActivity"
